# ai-ide-compare

./: .gitignore  mise.toml  pyproject.toml  readme.md
src/ai_ide_compare/: __init__.py  console.py  shared.py  task_eval.py  task_init.py
tasks/greenfield/todo-app/: .mise.claude.toml  .mise.toml
templates/: task-template.toml
